core/testData/annotator/pod/itemOutsideOver.code
text

=over

=item proper one

=back

<error descr="List item outside over block">=item</error> incorrect item